Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -63,18 +63,12 @@
    ]
    },
    {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Split the dataframe into test and train data"
-   ]
-  },
-   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+   "# Split the dataframe into test and train data\n",  
     "def = split_data(df):\n",
     "X = df.drop('Y', axis=1).values\n",
     "y = df['Y'].values\n",
