Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -47,6 +47,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+   "# Train the model, return the model\n",
+   "def train_model(data, args):\n",
+   "reg_model = Ridge(**args)\n",
+   "reg_model.fit(data[\"train\"][\"X\"], data[\"train\"][\"y\"])\n",
+   "   return reg_model"
+   ]
+   },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,10 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+   "# Train the model, return the model\n",
    "def train_model(data, args):\n",
    "reg_model = Ridge(**args)\n",
    "reg_model.fit(data[\"train\"][\"X\"], data[\"train\"][\"y\"])\n",
