Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -60,13 +60,6 @@
    ]
    },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Main Program"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -89,7 +82,10 @@
     "    \"alpha\": 0.5\n",
     "}\n",
     "\n",
-    "reg_model = Ridge(**args)"
+    "reg_model = Ridge(**args)\n",
+    "\n",
+    "# Validate Model on Validation Set\n",
+    "metrics = get_model_metrics(reg, data)\n"
    ]
    },
   {
