Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -59,6 +59,18 @@
    "   return reg_model"
    ]
    },
+    {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Evaluate the metrics for the model\n",
+    "def = get_model_metrics(reg_model, data):\n",
+    "preds = reg_model.predict(data[\"test\"][\"X\"])\n",
+    "mse = mean_squared_error(preds, y_test)\n",
+    "metrics = {\"mse\": mse}\n",
+    " return metrics"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 4,
@@ -139,7 +151,7 @@
    ]
    },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
    "metadata": {},
    "source": [
     "## Evaluate the metrics for the model"
