Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Evaluate the metrics for the model\n",
-    "def = get_model_metrics(reg_model, data):\n",
+    "def get_model_metrics(reg_model, data):\n",
     "preds = reg_model.predict(data[\"test\"][\"X\"])\n",
     "mse = mean_squared_error(preds, y_test)\n",
     "metrics = {\"mse\": mse}\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-   "def = main():\n",
+   "def  main():\n",
     "# Load data\n",
      "sample_data = load_diabetes()\n",
     "\n",
@@ -89,7 +89,7 @@
     "df['Y'] = sample_data.target\n",
     "\n",
     "# Split Data into Training and Validation Sets\n",
-    " def = split_data(df):\n",
+    " data = split_data(df):\n",
     "\n", 
     "# Train Model on Training Set\n",
     "args = {\n",
