Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -99,17 +99,15 @@
     "reg_model = Ridge(**args)\n",
     "\n",
     "# Validate Model on Validation Set\n",
-    "metrics = get_model_metrics(reg, data)\n"
+    "metrics = get_model_metrics(reg, data)\n",
+    "\n",
+    "# Save Model\n",
+   "model_name = \"sklearn_regression_model.pkl\"\n",
+    "\n",
+    "joblib.dump(value=reg, filename=model_name)"
    ]
    },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save Model"
-   ]
-  },
-  {
+   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
