Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -107,6 +107,28 @@
     "joblib.dump(value=reg, filename=model_name)"
    ]
    },
+   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sklearn_regression_model.pkl']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_name = \"sklearn_regression_model.pkl\"\n",
+    "\n",
+    "joblib.dump(value=reg, filename=model_name)"
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
