Update Diabetes Ridge Regression Scoring.ipynb

--- a/experimentation/Diabetes Ridge Regression Scoring.ipynb
+++ b/experimentation/Diabetes Ridge Regression Scoring.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def init()\n",
+    "def init():\n",
     "model_path = Model.get_model_path(model_name=\"sklearn_regression_model.pkl\")\n",
     "model = joblib.load(model_path)"
    ]
