--- a/experimentation/Diabetes Ridge Regression Scoring.ipynb
+++ b/experimentation/Diabetes Ridge Regression Scoring.ipynb
@@ -57,10 +57,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data = '{\"data\":[[1,2,3,4,5,6,7,8,9,10],[10,9,8,7,6,5,4,3,2,1]]}'\n",
+    "def run(raw_data, request_headers):\n"
     "\n",
     "data = json.loads(raw_data)[\"data\"]\n",
-    "data = numpy.array(data)"
+    "data = numpy.array(data)\n",
+    "result = model.predict(data)\n",
+    "\n"
+    "return {"result": result.tolist()}"
    ]
   },
   {
