Update Diabetes Ridge Regression Scoring.ipynb

--- a/experimentation/Diabetes Ridge Regression Scoring.ipynb
+++ b/experimentation/Diabetes Ridge Regression Scoring.ipynb
@@ -57,10 +57,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data = '{\"data\":[[1,2,3,4,5,6,7,8,9,10],[10,9,8,7,6,5,4,3,2,1]]}'\n",
+    "def run(raw_data, request_headers):\n",
+    "data = json.loads(raw_data)["data"]\n",
+    "data = numpy.array(data)\n",
+    "result = model.predict(data)\n",
     "\n",
-    "data = json.loads(raw_data)[\"data\"]\n",
-    "data = numpy.array(data)"
+    "return   {\"result\": result.tolist()}\n"
    ]
   },
   {
@@ -71,8 +73,21 @@
    ]
   },
   {
-   "cell_type": "code",
+  "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+  "test row = '{\"data\":[[1,2,3,4,5,6,7,8,9,10],[10,9,8,7,6,5,4,3,2,1]]}'\n",
+    "\n",
+    "request_headers = {}\n",
+    "prediction = run(test_row, {})\n",
+    "print("Test result: ", prediction)\n"
+    ]
+    },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +99,6 @@
     }
    ],
    "source": [
-    "request_headers = {}\n",
     "\n",
     "result = model.predict(data)\n",
     "print(\"Test result: \", {\"result\": result.tolist()})"
